syntax = "proto3";

package rivet.backend.pkg.kv_config.version_publish;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/kv.proto";

message Request {
	rivet.common.Uuid version_id = 1;
	rivet.backend.kv.VersionConfig config = 2;
	rivet.backend.kv.VersionConfigCtx config_ctx = 3;
}

message Response {

}
